Update Google Analytics tags and meta tags

--- a/english/index.html
+++ b/english/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPLB967DYP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-GPLB967DYP');
 </script>
-  <meta charset="utf-8"/>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+
+<meta charset="utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
-</script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-17377754743');
 </script>
+
 <title>Accounting Expertise in Brussels | Account-Bel</title>
-  <!-- OPEN GRAPH + TWITTER PREVIEW -->
+
 <meta property="og:title" content="Accounting Expertise in Brussels | Account-Bel">
 <meta property="og:description" content="Modern and demanding accounting firm in Brussels. Taxation, payroll, audit, consulting.">
 <meta property="og:image" content="https://account-bel.be/logo.png">
@@ -43,12 +41,19 @@
 <meta name="twitter:image" content="https://account-bel.be/logo.png">
 <meta name="twitter:image:alt" content="Account-Bel Logo">
 
-  <link rel="stylesheet" href="../style.css?v=4">
-  <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#000000">
+
+<link rel="stylesheet" href="../style.css?v=4">
+<link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
+
 <body>
-<!-- NAVBAR -->
 <nav class="navbar">
   <ul class="nav-left">
     <li><a href="#about">ABOUT</a></li>
@@ -61,13 +66,13 @@
   <div class="logo-wrapper">
     <a href="#home"><img src="../logo.webp" alt="Logo" class="logo-overlap" /></a>
   </div>
-<div class="lang-switch" aria-label="Language selection">
-  <a href="../fr/index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
-</div>
+
+  <div class="lang-switch" aria-label="Language selection">
+    <a href="../fr/index.html">FR</a> | <a href="index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="../greek/index.html">GR</a>
+  </div>
 </nav>
 
 <main class="scroll-container">
-<!-- HOME -->
 <section class="hero" id="accueil">
   <img src="../home.webp" alt="Home" class="hero-image" fetchpriority="high" />
   <div class="hero-overlay"></div>
@@ -79,7 +84,6 @@
   </div>
 </section>
 
-<!-- ABOUT -->
 <section class="about" id="about">
   <div class="about-text">
     <h2>ABOUT ACCOUNT-BEL<span class="belgian-flag-img title-flag"></span></h2>
@@ -90,12 +94,11 @@
     <p><strong>Our mission:</strong> to help you move forward with confidence, because when the numbers are clear, so is your mind.</p>
   </div>
   <div class="about-photo-wrapper">
-    <img src="../admin.webp"  alt="Michael Administrator" loading="lazy" />
+    <img src="../admin.webp" alt="Michael Administrator" loading="lazy" />
     <div class="about-photo-overlay">Michael Administrator</div>
   </div>
 </section>
 
-<!-- SERVICES -->
 <section class="services-section" id="services">
   <h2 class="services-title">OUR SERVICES</h2>
   <div class="services-grid">
@@ -110,7 +113,6 @@
   </div>
 </section>
 
-<!-- BLOG -->
 <section class="blog-section" id="blog">
   <h2 class="blog-title">OUR BLOG</h2>
   <div class="blog-container">
@@ -127,7 +129,6 @@
   </div>
 </section>
 
-<!-- CONTACT -->
 <section class="page-section contact-section" id="contact">
   <h1 class="contact-title">YOUR REQUEST, OUR PRIORITY</h1>
   <p class="contact-subtext">Whether you're a client, a future client, or a partner, we're here to listen. Share your request, and we’ll get back to you as soon as possible.</p>
@@ -153,19 +154,15 @@
   </div>
 </section>
 
-<!-- GALLERY -->
 <section class="gallery-section" id="galery-section">
   <h2 class="gallery-title">GALLERY</h2>
   <div class="gallery-grid">
-    <div class="gallery-item"><img src="../galerie1.webp" alt="Photo 1" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie2.webp" alt="Photo 2" loading="lazy" /></div>
-    <div class="gallery-item"><img src="../galerie3.webp" alt="Photo 3" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie4.webp" alt="Photo 4" loading="lazy" /></div>
   </div>
 </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ALL RIGHTS RESERVED.</p>
@@ -183,7 +180,6 @@
   </div>
 </footer>
 
-<!-- FORM SCRIPT -->
 <script>
   const form = document.getElementById("contactForm");
   const anim = document.getElementById("animationSuccess");
@@ -218,7 +214,6 @@
   }
 </script>
 
-<!-- COOKIES -->
 <div class="cookie-banner" id="cookieBanner" style="display: none;">
   <p>This site uses technical cookies for proper functionality.</p>
   <button onclick="acceptCookies()">OK</button>
@@ -236,7 +231,7 @@
     }
   });
 </script>
-  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+
 <script>
   gtag('event', 'conversion', {
       'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
@@ -244,6 +239,7 @@
       'currency': 'EUR'
   });
 </script>
-  <script src="../nocache.js"></script>
+
+<script src="../nocache.js"></script>
 </body>
 </html>
