Update Google tag and meta tags in index.html

--- a/greek/index.html
+++ b/greek/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="el">
 <head>
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPLB967DYP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-GPLB967DYP');
 </script>
-  <meta charset="utf-8"/>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+
+<meta charset="utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
-</script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-17377754743');
 </script>
+
 <title>Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel</title>
-  <!-- APERÇU PARTAGE (Open Graph + Twitter) -->
+
 <meta property="og:title" content="Λογιστική Εξειδίκευση στις Βρυξέλλες | Account-Bel">
 <meta property="og:description" content="Σύγχρονο και απαιτητικό λογιστικό γραφείο στις Βρυξέλλες. Φορολογία, μισθοδοσία, έλεγχος, συμβουλευτική.">
 <meta property="og:image" content="https://account-bel.be/logo.png">
@@ -41,12 +39,19 @@
 <meta name="twitter:image" content="https://account-bel.be/logo.png">
 <meta name="twitter:image:alt" content="Λογότυπο Account-Bel">
 
-  <link rel="stylesheet" href="../style.css?v=4">
-  <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#000000">
+
+<link rel="stylesheet" href="../style.css?v=4">
+<link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
+
 <body>
-<!-- NAVBAR -->
 <nav class="navbar">
   <ul class="nav-left">
     <li><a href="#about">ΣΧΕΤΙΚΑ</a></li>
@@ -59,13 +64,13 @@
   <div class="logo-wrapper">
     <a href="#accueil"><img src="../logo.webp" alt="Λογότυπο" class="logo-overlap" /></a>
   </div>
-<div class="lang-switch" aria-label="Επιλογή γλώσσας">
- <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
-</div>
+
+  <div class="lang-switch" aria-label="Επιλογή γλώσσας">
+    <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="../nederlands/index.html">NL</a> | <a href="index.html">GR</a>
+  </div>
 </nav>
 
 <main class="scroll-container">
-<!-- HERO -->
 <section class="hero" id="accueil">
   <img src="../home.webp" alt="Αρχική" class="hero-image"/>
   <div class="hero-overlay"></div>
@@ -77,8 +82,6 @@
   </div>
 </section>
 
-
-<!-- ABOUT -->
 <section class="about" id="about">
   <div class="about-text">
     <h2>ΣΧΕΤΙΚΑ ΜΕ ΤΗΝ ACCOUNT-BEL<span class="belgian-flag-img title-flag"></span></h2>
@@ -88,12 +91,11 @@
     <p><strong>Αποστολή μας:</strong> Να σας βοηθήσουμε να προχωρήσετε με σιγουριά, γιατί όταν τα νούμερα είναι καθαρά, είναι και το μυαλό.</p>
   </div>
   <div class="about-photo-wrapper">
-    <img src="../admin.webp" alt="Μιχαήλ Διαχειριστής" loading="lazy"  />
+    <img src="../admin.webp" alt="Μιχαήλ Διαχειριστής" loading="lazy" />
     <div class="about-photo-overlay">Μιχαήλ Διαχειριστής</div>
   </div>
 </section>
 
-<!-- SERVICES -->
 <section class="services-section" id="services">
   <h2 class="services-title">ΟΙ ΥΠΗΡΕΣΙΕΣ ΜΑΣ</h2>
   <div class="services-grid">
@@ -108,7 +110,6 @@
   </div>
 </section>
 
-<!-- BLOG -->
 <section class="blog-section" id="blog">
   <h2 class="blog-title">ΤΟ ΙΣΤΟΛΟΓΙΟ ΜΑΣ</h2>
   <div class="blog-container">
@@ -125,7 +126,6 @@
   </div>
 </section>
 
-<!-- CONTACT -->
 <section class="page-section contact-section" id="contact">
   <h1 class="contact-title">ΤΟ ΑΙΤΗΜΑ ΣΑΣ, Η ΠΡΟΤΕΡΑΙΟΤΗΤΑ ΜΑΣ</h1>
   <p class="contact-subtext">Περιγράψτε μας την ανάγκη σας. Θα απαντήσουμε σύντομα.</p>
@@ -151,19 +151,15 @@
   </div>
 </section>
 
-<!-- GALLERY -->
 <section class="gallery-section" id="galerie">
   <h2 class="gallery-title">ΓΚΑΛΕΡΙ</h2>
   <div class="gallery-grid">
-    <div class="gallery-item"><img src="../galerie1.webp" alt="Φωτογραφία 1" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie2.webp" alt="Φωτογραφία 2" loading="lazy" /></div>
-    <div class="gallery-item"><img src="../galerie3.webp" alt="Φωτογραφία 3" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie4.webp" alt="Φωτογραφία 4" loading="lazy" /></div>
   </div>
 </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ΟΛΑ ΤΑ ΔΙΚΑΙΩΜΑΤΑ ΚΑΤΟΧΥΡΩΜΕΝΑ.</p>
@@ -181,7 +177,6 @@
   </div>
 </footer>
 
-<!-- SCRIPTS -->
 <script>
   const form = document.getElementById("contactForm");
   const anim = document.getElementById("animationSuccess");
@@ -233,7 +228,7 @@
     }
   });
 </script>
-  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+
 <script>
   gtag('event', 'conversion', {
       'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
@@ -241,6 +236,7 @@
       'currency': 'EUR'
   });
 </script>
-  <script src="../nocache.js"></script>
+
+<script src="../nocache.js"></script>
 </body>
 </html>
