--- a/nederlands/index.html
+++ b/nederlands/index.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GPLB967DYP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-GPLB967DYP');
 </script>
-  <meta charset="utf-8"/>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+
+<meta charset="utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743">
-</script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17377754743"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-17377754743');
 </script>
-  <title>Boekhoudkundige expertise in Brussel | Account-Bel</title>
-  <meta name="description" content="Account-Bel, erkend boekhoudkantoor in Brussel. Boekhouding, fiscaliteit, oprichting van ondernemingen en advies op maat." />
-  <meta name="keywords" content="boekhouding, fiscaliteit, Brussel, Account-Bel, boekhoudkantoor, btw, jaarrekening" />
-  <meta name="author" content="Account-Bel SRL" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://account-bel.be/nederlands/index.html" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
-  <meta property="og:description" content="Boekhouding, fiscale aangiften en oprichting van ondernemingen in Brussel. Deskundige en vertrouwelijke begeleiding." />
-  <meta property="og:image" content="https://account-bel.be/logo.png" />
-  <meta property="og:image:width" content="1200" />
+<title>Boekhoudkundige expertise in Brussel | Account-Bel</title>
+<meta name="description" content="Account-Bel, erkend boekhoudkantoor in Brussel. Boekhouding, fiscaliteit, oprichting van ondernemingen en advies op maat." />
+<meta name="keywords" content="boekhouding, fiscaliteit, Brussel, Account-Bel, boekhoudkantoor, btw, jaarrekening" />
+<meta name="author" content="Account-Bel SRL" />
+<meta name="robots" content="index, follow" />
+<link rel="canonical" href="https://account-bel.be/nederlands/index.html" />
+
+<meta property="og:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
+<meta property="og:description" content="Boekhouding, fiscale aangiften en oprichting van ondernemingen in Brussel. Deskundige en vertrouwelijke begeleiding." />
+<meta property="og:image" content="https://account-bel.be/logo.png" />
+<meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 <meta property="og:image:alt" content="Logo Account-Bel" />
-  <meta property="og:url" content="https://account-bel.be/nederlands/index.html" />
-  <meta property="og:type" content="website" />
+<meta property="og:url" content="https://account-bel.be/nederlands/index.html" />
+<meta property="og:type" content="website" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
-  <meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
-  <meta name="twitter:image" content="https://account-bel.be/logo.png" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Boekhoudkundige expertise in Brussel | Account-Bel" />
+<meta name="twitter:description" content="Uw cijfers, onze zorg. Persoonlijke boekhoudkundige begeleiding in Brussel." />
+<meta name="twitter:image" content="https://account-bel.be/logo.png" />
 
-  <link rel="stylesheet" href="../style.css?v=4">
-  <link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#000000">
+
+<link rel="stylesheet" href="../style.css?v=4">
+<link rel="preload" href="../home.webp" as="image" type="image/webp" fetchpriority="high">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap" rel="stylesheet"/>
 </head>
+
 <body>
-<!-- NAVBAR -->
 <nav class="navbar">
   <ul class="nav-left">
     <li><a href="#about">OVER ONS</a></li>
@@ -66,14 +69,13 @@
   <div class="logo-wrapper">
     <a href="#accueil"><img src="../logo.webp" alt="Logo" class="logo-overlap" /></a>
   </div>
-  
+
   <div class="lang-switch" aria-label="Taalkeuze">
     <a href="../fr/index.html">FR</a> | <a href="../english/index.html">EN</a> | <a href="index.html">NL</a> | <a href="../greek/index.html">GR</a>
   </div>
 </nav>
 
 <main class="scroll-container">
-<!-- HERO -->
 <section class="hero" id="accueil">
   <img src="../home.webp" alt="Home" class="hero-image"/>
   <div class="hero-overlay"></div>
@@ -85,8 +87,6 @@
   </div>
 </section>
 
-
-<!-- OVER ONS -->
 <section class="about" id="about">
   <div class="about-text">
     <h2>OVER ACCOUNT-BEL<span class="belgian-flag-img title-flag"></span></h2>
@@ -101,7 +101,6 @@
   </div>
 </section>
 
-<!-- DIENSTEN -->
 <section class="services-section" id="services">
   <h2 class="services-title">ONZE DIENSTEN</h2>
   <div class="services-grid">
@@ -116,7 +115,6 @@
   </div>
 </section>
 
-<!-- BLOG -->
 <section class="blog-section" id="blog">
   <h2 class="blog-title">ONZE BLOG</h2>
   <div class="blog-container">
@@ -133,7 +131,6 @@
   </div>
 </section>
 
-<!-- CONTACT -->
 <section class="page-section contact-section" id="contact">
   <h1 class="contact-title">UW AANVRAAG, ONZE PRIORITEIT</h1>
   <p class="contact-subtext">Stel ons uw vraag, wij antwoorden zo spoedig mogelijk.</p>
@@ -159,19 +156,15 @@
   </div>
 </section>
 
-<!-- GALERIJ -->
 <section class="gallery-section" id="galerie">
   <h2 class="gallery-title">GALERIJ</h2>
   <div class="gallery-grid">
-    <div class="gallery-item"><img src="../galerie1.webp" alt="Foto 1" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie2.webp" alt="Foto 2" loading="lazy" /></div>
-    <div class="gallery-item"><img src="../galerie3.webp" alt="Foto 3" loading="lazy" /></div>
     <div class="gallery-item"><img src="../galerie4.webp" alt="Foto 4" loading="lazy" /></div>
   </div>
 </section>
 </main>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <p>© 2025 ACCOUNT-BEL<span class="belgian-flag-img"></span>. ALLE RECHTEN VOORBEHOUDEN.</p>
@@ -188,7 +181,7 @@
     </div>
   </div>
 </footer>
-  <!-- Event snippet for Envoi de formulaire pour prospects conversion page -->
+
 <script>
   gtag('event', 'conversion', {
       'send_to': 'AW-17377754743/gK1PCOiF5IMbEPf8rd5A',
@@ -196,6 +189,7 @@
       'currency': 'EUR'
   });
 </script>
-  <script src="../nocache.js"></script>
+
+<script src="../nocache.js"></script>
 </body>
 </html>
